v3.0/Gr_note.md

笔记记录




 项目使用esp826612f
  OLED SCL D1 io5
  OLED SDA D2 io4
  
  433接收 D6 io12
  433发射 D0 io16
  315接收 D7 io13
  315发射 D8 io15
  上翻页  D3 io0
  下翻页  D5 io14
  确定键  D4 io2
  
Flash Mode="QIO"
flash size选择= 4mb(fs 2mb ota~1019kb)
cpu=160mhz




v3.0
1.修改按键判断逻辑，该版本更加完善。
2.修复发射模式，之前版本的单击 连击按键发射逻辑的问题,该版本修改为单击确定键一次即发射一次，长按为连续发射。
3.新增在发射菜单已经删除菜单里连续长按上下键为滚动菜单模式，可快速浏览保存的文件。
4.修改全文件删除方法，不再是在删除菜单长按下键才重新全部删除提示，而是直接在删除文件菜单页新添加一条菜单内容。
5.修复调试页多次进入会多次连接WiFi的情况，现在只要连接成功不掉线的情况下，不在进行多次调用连接WiFi命令。
6.修复wifi连接逻辑，设备第一次连接WiFi的情况下，不在额外等待20秒，会直接进入微信配网状态，现在微信配网不在是无限时间等待，进入微信配网以后，设备会等待两分钟，两分钟内没有配置成功则判定配置网络失败。
7.修改存储文件保存格式，该版本文件保存格式不再与之前版本兼容。
8.修改上位机通信方式，该版本不再与之前上位机版本兼容。
9.修改后台网页通信方式，不再是单纯的html我们加入了一些新鲜的元素。
10.修改后台网页ui，该版本后台ui功能更加齐全，[主页 射频页 系统设置页 OTA快捷跳转页 以及射频管家声明] 
11.修复之前版本在开启网络调试以后无法关闭WiFi问题，现在开启了网络调试如果想关闭WiFi，可直接进入ap菜单关闭WiFi  ap菜单显示不再是打开WiFi而是关闭WiFi
12.修复之前版本开启网络调试下路由器的DHCP设备名默认显示问题，现在可自定义设备名显示在你的路由器列表里（不可使用中文显示，普通路由器可能会显示乱码）
13.优化OTA界面ui，采用的三方库作为OTA页面
14.新增ap模式下自定义访问的IP地址 首次启用默认为192.168.4.1
15.新增ap模式下自定义ssid  password 
16.新增后台页面配置WiFi的多元化，支持WiFi的扫描
17.优化数据存储判断，现在哪怕是已经改名的数据也可以在接收到相同数据时提示数据已存在，不在重复保存同一个数据文件，并且提示的文件将会是已经改名的文件名
18.修复接收数据的逻辑模式，不完整的数据现在不做保存




ps配网无法连接的情况：
1. 不支持5g WiFi
2. 不支持2合1WiFi
3. 2.4gWiFi无法连接的情况下，建议重启路由器，如果还是不行建议刷入空白固件，在刷射频固件，能解决98%的问题







